# douyin-downloader

./: .gitignore  Dockerfile  config.yml  config_simple.yml  docker-compose.yaml  downloader.py  pyproject.toml  requirements.txt  run.ps1
apiproxy/douyin/: doris_client.py  douyin.py
utils/: logger.py
