[project]
name = "douyin-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.8.0",
    "black==23.11.0",
    "brotli>=1.2.0",
    "playwright>=1.57.0",
    "pytest==7.4.3",
    "python-dateutil>=2.8.2",
    "python-json-logger==2.0.7",
    "pyyaml==6.0.1",
    "requests==2.31.0",
    "requests-toolbelt>=1.0.0",
    "rich==13.7.0",
]
